Cosmetic updates in carts,  conditional button in admin page, wrong link in cart for emptying it, added user welcome message to login.

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -14,7 +14,7 @@
     <section class="section">
         {{#if cart.products.length}}
             <div class="box cart-products">
-                <table class="table is-fullwidth is-striped">
+                <table class="table is-fullwidth is-striped make-it-small">
                     <thead>
                         <tr>
                             <th></th>
