--- a/src/views/productsStatic.handlebars
+++ b/src/views/productsStatic.handlebars
@@ -35,7 +35,7 @@
             <div class="columns is-multiline is-centered">
                 {{#if products.length}}
                     {{#each products}}
-                        <div class="column is-12-mobile is-3-desktop">
+                        <div class="column is-12-mobile is-4-desktop">
                             <div class="card-title-container make-it-dark-back make-it-left make-it-white">
                                 <div>{{this.title}}</div>
                             </div>
@@ -63,7 +63,7 @@
                                     <div class="columns make-it-center small-section make-it-100percent-wide">
                                         <div class="column is-12">
                                             <button 
-                                                class="button make-it-100percent-wide is-small is-success make-it-normal add-to-cart-btn make-it-dark" 
+                                                class="button make-it-100percent-wide is-small is-success make-it-small add-to-cart-btn make-it-dark" 
                                                 data-product='{{{stringify this}}}'>
                                                 Add to cart
                                             </button>
