--- a/src/views/realTimeCarts.handlebars
+++ b/src/views/realTimeCarts.handlebars
@@ -27,11 +27,11 @@
             const paginatedCarts = carts.slice(start, end);
 
             cartList.innerHTML = `
-                <div class="make-it-rounded-top make-it-white-back make-it-normal">
-                    <div class="grid-container">
+                <div class="make-it-rounded-top  make-it-normal">
+                    <div class="columns is-multiline">
                         ${paginatedCarts.map(cart => `
-                            <div class="box make-it-white-back">
-                                <h5 class="make-it-dark-back make-it-white make-it-center make-it-rounded-top">Cart ${cart.cid}</h5>
+                            <div class="card section make-it-white-back column is-12">
+                                <h5 class="make-it-dark-back make-it-white make-it-center">Cart ${cart.cid}</h5>
                                 <table class="table make-it-dark make-it-small is-hoverable is-fullwidth">
                                     <thead>
                                         <tr class="make-it-semi-back make-it-rounded">
