--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -59,6 +59,14 @@
                     <p class="section make-it-small make-it-normal">All Tickets</p>
                 </a>
             </div>
+
+                        <!-- Ticket List View -->
+            <div class="column is-3 section">
+                <a href="/forms/users" class="button make-it-rounded make-it-100percent-wide">
+                    <span class="icon is-small"><i class="fas fa-users fa-1x"></i></span>
+                    <p class="section make-it-small make-it-normal">Users</p>
+                </a>
+            </div>
         </div>
     </section>
 
