User editor fixers

--- a/src/views/editUsers.handlebars
+++ b/src/views/editUsers.handlebars
@@ -12,10 +12,11 @@
 </head>
 
 <body>
+    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-normal make-it-rounded-top">
+        User management
+    </h2>
     <section class="">
         <form id="editUserForm" class="box make-it-semi-back">
-            <p class="make-it-white make-it-normal">Edit User</p>
-
             <div class="field small-section make-it-small">
                 <label class="label make-it-dark make-it-small" for="userSelect">Select User:</label>
                 <div class="control">
