Minor chnages in views for admin views.

--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -60,13 +60,22 @@
                 </a>
             </div>
 
-                        <!-- Ticket List View -->
+            <!-- Create User -->
+            <div class="column is-3 section">
+                <a href="/register" class="button make-it-rounded make-it-100percent-wide">
+                    <span class="icon is-small"><i class="fas fa-user fa-1x"></i></span>
+                    <p class="section make-it-small make-it-normal">Create Account</p>
+                </a>
+            </div>
+
+            <!-- User Management View -->
             <div class="column is-3 section">
                 <a href="/forms/users" class="button make-it-rounded make-it-100percent-wide">
                     <span class="icon is-small"><i class="fas fa-users fa-1x"></i></span>
-                    <p class="section make-it-small make-it-normal">Users</p>
+                    <p class="section make-it-small make-it-normal">User Editor</p>
                 </a>
             </div>
+
         </div>
     </section>
 
