--- a/src/views/editUsers.handlebars
+++ b/src/views/editUsers.handlebars
@@ -13,7 +13,7 @@
 
 <body>
     <h2 class="section make-it-left make-it-white-back make-it-dark make-it-normal make-it-rounded-top">
-        User management
+        User Editor
     </h2>
     <section class="">
         <form id="editUserForm" class="box make-it-semi-back">
@@ -61,8 +61,8 @@
                 </div>
 
                 <div class="field rt-general-page-footer">
-                    <div class="control ">
-                        <button class="button is-success is-fullwidth" type="submit">Save Changes</button>
+                    <div class="control make-it-center make-it-100percent-wide">
+                        <button class="button is-success make-it-small make-it-dark " type="submit">Save Changes</button>
                     </div>
                 </div>
             </div>
